--- a/index.html
+++ b/index.html
@@ -1,103 +1,35 @@
-    <!-- …your existing </style> tags above… -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Money Stretch Calculator</title>
+  <style>
+    body { font-family: sans-serif; padding: 20px; max-width: 600px; margin: auto; }
+    label, input { display: block; margin: 10px 0; }
+    input { padding: 8px; width: 100%; }
+    button { padding: 10px 15px; background-color: #718cc9; color: white; border: none; cursor: pointer; }
+  </style>
+</head>
+<body>
+  <h2>Money Stretch Calculator</h2>
+  <label>Current Savings ($): <input type="number" id="savings" /></label>
+  <label>Monthly Expenses ($): <input type="number" id="expenses" /></label>
+  <button onclick="calculate()">Calculate</button>
+  <h3 id="result"></h3>
 
-    <!-- QUIET LUXURY THEME -->
-    <style>
-      :root {
-        /* your new “quiet luxury” palette */
-        --bg-page:        #fdfdfc;
-        --bg-card:        #ffffff;
-        --text-primary:   #252525;
-        --text-secondary: #7c7d72;
-        --accent:         #adc9dd;
-        --shadow:         rgba(0, 0, 0, 0.05);
-        --radius:         8px;
-        --spacing:        1.5rem;
+  <script>
+    function calculate() {
+      const savings = parseFloat(document.getElementById("savings").value);
+      const expenses = parseFloat(document.getElementById("expenses").value);
+      if (!savings || !expenses || expenses <= 0) {
+        document.getElementById("result").innerText = "Enter valid numbers.";
+        return;
       }
-
-      body {
-        background: var(--bg-page);
-        color: var(--text-primary);
-        font-family: "Open Sans", sans-serif;
-        line-height: 1.6;
-        padding: var(--spacing);
-      }
-
-      .card,
-      .cardTwo {
-        background: var(--bg-card) !important;
-        box-shadow: 0 4px 20px var(--shadow);
-        border-radius: var(--radius) !important;
-        padding: var(--spacing) !important;
-        margin: var(--spacing) auto !important;
-        border: none !important;
-      }
-
-      .mainheading h5,
-      .mainheading2 h5 {
-        color: var(--text-primary) !important;
-        font-size: 1.125rem;
-        margin-bottom: 1rem;
-      }
-
-      label,
-      .summary-heading,
-      .tooltip_span svg {
-        color: var(--text-secondary) !important;
-      }
-
-      /* Inputs & sliders */
-      input[type="text"],
-      input[type="range"],
-      .irs--big .irs-line,
-      .irs--big .irs-bar {
-        background: var(--accent) !important;
-        border-radius: var(--radius) !important;
-        border: none !important;
-      }
-
-      input[type="text"] {
-        background: var(--bg-card) !important;
-        padding: 0.75rem 1rem !important;
-        color: var(--text-primary) !important;
-        box-shadow: inset 0 2px 8px var(--shadow);
-      }
-
-      /* GRAPH / SUMMARY buttons */
-      button {
-        background: none;
-        border: none;
-        padding: 0.5rem 1rem;
-        font-weight: 600;
-        color: var(--text-secondary);
-        cursor: pointer;
-      }
-      button.active {
-        border-bottom: 2px solid var(--accent);
-        color: var(--text-primary);
-      }
-
-      /* Chart container */
-      .highcharts-figure,
-      #container {
-        background: var(--bg-card);
-        border-radius: var(--radius);
-        box-shadow: 0 4px 20px var(--shadow);
-        padding: var(--spacing);
-      }
-
-      /* Summary rows */
-      .summary-child {
-        border-bottom: 1px solid var(--text-secondary);
-        padding: 0.75rem 0;
-      }
-      .summary-span {
-        color: var(--text-primary) !important;
-        font-weight: 700;
-      }
-
-      /* Flex tweaks */
-      #summary_div {
-        gap: var(--spacing);
-        margin: var(--spacing) 0;
-      }
-    </style>
+      const months = savings / expenses;
+      const years = Math.floor(months / 12);
+      const remainingMonths = Math.round(months % 12);
+      document.getElementById("result").innerText = `Your money will last about ${years} years and ${remainingMonths} months.`;
+    }
+  </script>
+</body>
+</html>
